# kimi-mcp-hub

./: .gitignore  ANALYSIS_AND_PLAN.md  OAUTH_PLAN.md  README.md  SKILL_ANALYSIS.md  kimi.plugin.json  package.json  pyproject.toml
.github/workflows/: ci.yml
commands/: add.md  setup.md
docs/: remote-mcp-server-setup.md
docs/superpowers/plans/: 2026-06-30-advanced-memory.md  2026-06-30-llm-session-summaries.md  2026-06-30-repo-packer.md
docs/superpowers/specs/: 2026-06-30-advanced-memory-design.md  2026-06-30-llm-session-summaries-design.md  2026-06-30-repo-packer-design.md
install/: install.ps1  install.sh  npm-wrapper.js
scripts/: bump_version.py
src/kimi_mcp_hub/: __init__.py  __main__.py  _post_install.py  cli.py  config.py  i18n.py  import_claude.py  memory_hook.py  plugin_installer.py  preflight.py  profiles.py  project.py  registry.py
src/kimi_mcp_hub/auth/: __init__.py  oauth.py  providers.py
src/kimi_mcp_hub/cli/: __init__.py  base.py  common.py  helpers.py  memory_cmds.py  misc_cmds.py  obsidian_cmds.py  plugins_cmds.py  profiles_cmds.py  self_cmds.py  servers_cmds.py  skills_cmds.py
src/kimi_mcp_hub/memory/: __init__.py  db.py  hooks.py  plugin.py  summarizer.py
src/kimi_mcp_hub/pack/: __init__.py  packer.py
src/kimi_mcp_hub/servers/: __init__.py  chrome_devtools.py  confluence.py  context7.py  datadog.py  dbhub.py  desktop_commander.py  figma.py  figma_context.py  github.py  gitlab.py  gmail.py  grain.py  hubspot.py  jira.py  linear.py  mobile_mcp.py  obsidian.py  perplexity.py  playwright.py  postgres.py  sentry.py  slack.py  stripe.py  supabase.py
src/kimi_mcp_hub/skills/: __init__.py
src/kimi_mcp_hub/skills/agent-automation-recommender/: SKILL.md
src/kimi_mcp_hub/skills/agent-browser/: SKILL.md
src/kimi_mcp_hub/skills/api-design/: SKILL.md
src/kimi_mcp_hub/skills/api-designer/: SKILL.md
src/kimi_mcp_hub/skills/backend-architect/: SKILL.md
src/kimi_mcp_hub/skills/backend-typescript-architect/: SKILL.md
src/kimi_mcp_hub/skills/caveman/: SKILL.md
src/kimi_mcp_hub/skills/caveman-commit/: SKILL.md
src/kimi_mcp_hub/skills/caveman-review/: SKILL.md
src/kimi_mcp_hub/skills/chrome-devtools-skill/: SKILL.md
src/kimi_mcp_hub/skills/claude-compat/: SKILL.md
src/kimi_mcp_hub/skills/code-review-anthropic/: SKILL.md
src/kimi_mcp_hub/skills/ecc/: SKILL.md
test-vault/: README.md
tests/: test_cli.py  test_config.py  test_i18n.py  test_integration.py  test_memory_db.py  test_memory_summarizer.py  test_obsidian.py  test_pack.py  test_plugin_installer.py  test_plugin_manifest.py  test_profiles.py  test_project.py  test_registry_sync.py  test_shell_doctor.py
(+49 files in other folders)
