[project]
name = "kimi-mcp-hub"
version = "0.1.0"
description = "One-click MCP server and skills manager for Kimi CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "platformdirs>=3.0",
]

[project.scripts]
kimi-mcp-hub = "kimi_mcp_hub.cli:main"
kmcp = "kimi_mcp_hub.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_mcp_hub"]

[tool.hatch.build.targets.wheel.force-include]
"src/kimi_mcp_hub/skills" = "kimi_mcp_hub/skills"
