[project]
name = "kimi-mcp-hub"
version = "0.3.0"
description = "One-click MCP server and skills manager for Kimi CLI -- 24 MCP servers, 57 AI skills, persistent memory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KalimeroMK"},
]
keywords = [
    "kimi", "mcp", "cli", "ai", "skills", "claude", "openai",
    "jira", "github", "slack", "memory", "plugins",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "platformdirs>=3.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
kimi-mcp-hub = "kimi_mcp_hub.cli:main"
kmcp = "kimi_mcp_hub.cli:main"

[project.urls]
Homepage = "https://github.com/KalimeroMK/kimi-mcp-hub"
Repository = "https://github.com/KalimeroMK/kimi-mcp-hub.git"
Documentation = "https://github.com/KalimeroMK/kimi-mcp-hub#readme"
Issues = "https://github.com/KalimeroMK/kimi-mcp-hub/issues"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "build", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_mcp_hub"]
artifacts = ["src/kimi_mcp_hub/skills/**/*.md", "src/kimi_mcp_hub/locale/**/*.mo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
src = ["src"]
